--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-	<title>douglasjose.com</title>
+	<title>douglasjo.se</title>
 </head>
 <body>
-	<p>douglasjose.com</p>
+<pre>douglasjo.se</pre>
 </body>
